env-select - fixing a few spacing issues as well as having selected item be expanded more so than others

--- a/app/stylesheets/katello.scss
+++ b/app/stylesheets/katello.scss
@@ -1393,8 +1393,7 @@ fieldset {
 /*Environment selector stuff*/
 #path-widget {
   margin: 0 auto;
-  width: 50%;
-
+  
   #path-controller {
       border-style: solid;
       border-width: 1px;
@@ -1441,6 +1440,7 @@ fieldset {
       z-index: 200;
       position: absolute;
       background-color: $white_color;
+      margin-left: 0;
   }
 }
 
